# code-quest

./: .clang-format  CMakeLists.txt  compile_commands.json
quests/_template/: description.md
quests/_template/src/: solution.cpp
quests/_template/test/: solution.test.cpp
quests/array-i/1-array_concatenation/: CMakeLists.txt
quests/array-i/1-array_concatenation/test/: solution.test.cpp  test_runner.cpp
quests/array-i/2-array_shuffle/src/: solution.cpp
quests/array-i/2-array_shuffle/test/: solution.test.cpp
quests/array-i/3-array_max_consecutive_ones/: description.md
quests/array-i/3-array_max_consecutive_ones/src/: solution.cpp
quests/array-i/3-array_max_consecutive_ones/test/: solution.test.cpp  test_runner.cpp
quests/array-i/array_concatenation/src/: solution.cpp
quests/array-i/array_concatenation/test/: solution.test.cpp
quests/array-i/array_shuffle/: CMakeLists.txt  description.md
quests/array-i/array_shuffle/src/: solution.cpp
quests/array-i/array_shuffle/test/: solution.test.cpp
quests/array-ii/1-set-mismatch/: description.md
quests/array-ii/1-set-mismatch/src/: solution.cpp
quests/array-ii/1-set-mismatch/test/: solution.test.cpp
quests/array-ii/2-how-many-numbers-are-smaller-than-current-number/: CMakeLists.txt
quests/array-ii/2-how-many-numbers-are-smaller-than-current-number/src/: solution.cpp
quests/array-ii/2-how-many-numbers-are-smaller-than-current-number/test/: solution.test.cpp
quests/array_i/: CMakeLists.txt  description.md
quests/array_i/src/: solution.cpp
quests/array_i/test/: solution.test.cpp
runners/: run_all_tests.cpp
